--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
+  },
+  "dependencies": {
+    "d3": "^4.3.0"
   }
 }
